--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "clsx": "^1.2.1",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-lazy-load": "^4.0.1",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.11.0",
-    "sort-by": "^1.2.0"
+    "react-to-pdf": "^0.0.14",
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
